--- a/package.json
+++ b/package.json
@@ -25,9 +25,9 @@
   "homepage": "https://github.com/luckstar77/api-judicial-cases#readme",
   "dependencies": {
     "cors": "^2.8.5",
+    "express": "^4.18.1",
     "knex": "^2.3.0",
-    "mysql2": "^2.3.3",
-    "express": "^4.18.1"
+    "mysql2": "^2.3.3"
   },
   "devDependencies": {
     "@types/cors": "^2.8.12",
@@ -36,6 +36,7 @@
     "@typescript-eslint/eslint-plugin": "^5.39.0",
     "@typescript-eslint/parser": "^5.45.1",
     "eslint": "^8.29.0",
-    "prettier": "^2.8.0"
+    "prettier": "^2.8.0",
+    "ts-node": "^10.9.1"
   }
 }
