--- a/package.json
+++ b/package.json
@@ -24,14 +24,19 @@
   },
   "homepage": "https://github.com/luckstar77/api-judicial-cases#readme",
   "dependencies": {
+    "connect-session-knex": "^3.0.1",
     "cors": "^2.8.5",
+    "dotenv": "^16.3.1",
     "express": "^4.18.1",
+    "express-session": "^1.17.3",
+    "firebase-admin": "^11.9.0",
     "knex": "^2.3.0",
     "mysql2": "^2.3.3"
   },
   "devDependencies": {
     "@types/cors": "^2.8.12",
     "@types/express": "^4.17.14",
+    "@types/express-session": "^1.17.7",
     "@types/node": "^18.8.2",
     "@typescript-eslint/eslint-plugin": "^5.39.0",
     "@typescript-eslint/parser": "^5.45.1",
