--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -7,15 +7,20 @@
         {
             "type": "node",
             "request": "launch",
-            "name": "api-judicial-cases",
-            "skipFiles": [
-                "<node_internals>/**"
-            ],
+            "name": "local-api-judicial-cases",
+            "skipFiles": ["<node_internals>/**"],
             "program": "${workspaceFolder}/src/index.ts",
             "preLaunchTask": "tsc: build - tsconfig.json",
-            "outFiles": [
-                "${workspaceFolder}/build/**/*.js"
-            ]
+            "outFiles": ["${workspaceFolder}/build/**/*.js"]
+        },
+        {
+            "type": "node",
+            "request": "launch",
+            "name": "remote-api-judicial-cases",
+            "skipFiles": ["<node_internals>/**"],
+            "program": "${workspaceFolder}/src/index.ts",
+            "preLaunchTask": "tsc: build - tsconfig.json",
+            "outFiles": ["${workspaceFolder}/build/**/*.js"]
         }
     ]
 }
