--- a/package.json
+++ b/package.json
@@ -38,6 +38,8 @@
     "@types/cors": "^2.8.12",
     "@types/express": "^4.17.14",
     "@types/express-session": "^1.17.7",
+    "@types/glob": "^8.1.0",
+    "@types/jsonwebtoken": "^9.0.6",
     "@types/node": "^18.8.2",
     "@typescript-eslint/eslint-plugin": "^5.39.0",
     "@typescript-eslint/parser": "^5.45.1",
