--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "description": "提供租屋通 API 查詢租屋雙方資訊",
   "main": "index.js",
   "scripts": {
+    "dev": "ts-node-dev --respawn --transpile-only --clear src/index.ts",
     "start": "ts-node src/index.ts",
     "test": "echo ok"
   },
@@ -24,6 +25,8 @@
   },
   "homepage": "https://github.com/luckstar77/api-judicial-cases#readme",
   "dependencies": {
+    "@aws-sdk/client-s3": "^3.825.0",
+    "aws-sdk": "^2.1692.0",
     "connect-session-knex": "^3.0.1",
     "cors": "^2.8.5",
     "dotenv": "^16.3.1",
@@ -32,19 +35,26 @@
     "firebase-admin": "^11.9.0",
     "jsonwebtoken": "^9.0.1",
     "knex": "^2.3.0",
+    "multer": "^2.0.1",
+    "multer-s3": "^3.0.1",
     "mysql2": "^2.3.3"
   },
   "devDependencies": {
+    "@types/aws-sdk": "^0.0.42",
     "@types/cors": "^2.8.12",
     "@types/express": "^4.17.14",
     "@types/express-session": "^1.17.7",
     "@types/glob": "^8.1.0",
     "@types/jsonwebtoken": "^9.0.6",
+    "@types/knex": "^0.15.2",
+    "@types/multer": "^1.4.12",
+    "@types/multer-s3": "^3.0.3",
     "@types/node": "^18.8.2",
     "@typescript-eslint/eslint-plugin": "^5.39.0",
     "@typescript-eslint/parser": "^5.45.1",
     "eslint": "^8.29.0",
     "prettier": "^2.8.0",
-    "ts-node": "^10.9.1"
+    "ts-node-dev": "^2.0.0",
+    "typescript": "^5.8.3"
   }
 }
